# project-nhl-team-cards

./: .gitignore  README.md  pyproject.toml  requirements.txt
nhl_team_stat_cards.egg-info/: PKG-INFO  SOURCES.txt
src/: collect_data.py  collect_logos.py  constants.py  elo.py  generate_cards.py  prepare_data.py  scrape_data.py
src/team_card_project/: __innit__.py  collect_data.py  generate_cards.py  prepare_data.py
src/team_card_project/utils/: card_data.py  card_functions.py  card_generation.py  card_helpers.py  collect_logos.py  constants.py  elo.py  load_save.py  scrape_data.py  srs.py
src/utils/: card_data.py  card_functions.py  card_generation.py  collect_logos.py  constants.py  elo.py  load_save.py  scrape_data.py
