[build-system]
requires = ["setuptools>=65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nhl-team-stat-cards"
version = "0.1.0"
description = "NHL Team Stat Card generation project"
authors = [{ name = "Avery Doiron" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
